Implement ApproveCC.
