# main.go
@@ -30,6 +30,7 @@ func main() {
 	router.POST("/fabric/lifecycle/package", lc.PackageCC)
 	router.POST("/fabric/lifecycle/install/:package_name", lc.InstallCC)
 	router.GET("fabric/lifecycle/install", lc.QueryInstalledCC)
+	router.POST("fabric/lifecycle/approve", lc.ApproveCC)
 
 	// Swagger
 	docs.SwaggerInfo.BasePath = "/"
